--- a/.github/workflows/image-sync.yml
+++ b/.github/workflows/image-sync.yml
@@ -8,11 +8,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: hhyasdf/image-sync-action@v1.1
-        with:
-          auth_file: ./auth.yaml # The auth information file of registries, optional.
-          images_file: ./images.yaml # The images file descirbes which images need to sync, always needed.
-          version: latest # The version of image-syncer, use the latest version if not specified.
-          proc: 6 # The max number of goroutines to sync images, default value is 5.
+      # - uses: hhyasdf/image-sync-action@v1.1
+      #   with:
+      #     auth_file: ./auth.yaml # The auth information file of registries, optional.
+      #     images_file: ./images.yaml # The images file descirbes which images need to sync, always needed.
+      #     version: latest # The version of image-syncer, use the latest version if not specified.
+      #     proc: 6 # The max number of goroutines to sync images, default value is 5.
         env:
           TEST_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }} # For safty consideration, passing registry password by github action secrets is needed.
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20.4
+      - name: Build
+        run: make
+      - name: Run docker registry
+        run: docker run -d -p 5000:5000 --restart=always --name registry registry:2
+      - name: Run image-syncer
+        run: ./image-syncer --proc=6 --auth=./auth.yaml --images=./images.yaml
