--- a/auth.yaml
+++ b/auth.yaml
@@ -1,8 +1,9 @@
+# 目标仓库信息
 registry.cn-beijing.aliyuncs.com:
-  password: ${ALIHUB_PASSWORD}
+  password: $ALIHUB_PASSWORD
   username: yt_anck
   insecure: true
 docker.io:
   username: 307330552@qq.com
-  password: ${DOCKER_PASSWORD}
+  password: $DOCKER_PASSWORD
   insecure: true
