--- a/auth.yaml
+++ b/auth.yaml
@@ -2,7 +2,7 @@
 registry.cn-beijing.aliyuncs.com:
   password: $ALIHUB_PASSWORD
   username: yt_anck
-docker.io:
-  username: 307330552@qq.com
-  password: $DOCKER_PASSWORD
-  # insecure: true
+# docker.io:
+#   username: 307330552@qq.com
+#   password: $DOCKER_PASSWORD
+#   insecure: true
