--- a/.github/workflows/image-sync.yml
+++ b/.github/workflows/image-sync.yml
@@ -1,8 +1,8 @@
-name: test
+name: image-sync
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ main ]
+  push:
+    branches: [ main ]
   schedule:
     - cron: '0 01 * * *'
   
