--- a/.github/workflows/test-sync.yml
+++ b/.github/workflows/test-sync.yml
@@ -3,8 +3,8 @@ on:
   workflow_dispatch:
   # push:
   #   branches: [ main ]
-  schedule:
-    - cron: '0 01 * * *'
+  # schedule:
+  #   - cron: '0 01 * * *'
   
 jobs:
   image-sync:
