--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: test
 on:
   workflow_dispatch:
+    inputs:
+      source:
+        description: '镜像名:tag (Docker Hub)'     
+        required: true
+        default: 'nginx:1.13'
   # push:
   #   branches: [ main ]
   # schedule:
@@ -12,16 +17,38 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-      
+      uses: actions/checkout@v3
+    
+    # - name: SetupNodejs
+    #   uses: actions/setup-node@v3
+    - name: Check tag for image format
+      id: check_tag
+      run: |
+        node .github/scripts/checkFormat.js "${{ github.event.inputs.source }}"
+
+    - name: ERR format
+      if: steps.check_tag.outputs.is_image_format == 'false'
+      run: |
+        echo "err==="
+    - name: OK format
+      if: steps.check_tag.outputs.is_image_format == 'true'
+      run: |
+        echo "ok==="
+
+    - name: What is the event?
+      run: |
+        if [ ${{ steps.check_tag.outputs.is_image_format }} == 'true' ]; then
+          echo "This is a OK event"
+        else
+          echo "This is an ERR event"
         
-    - name: 下载image-sync工具包
-      run: |
-        wget -q  https://github.com/AliyunContainerService/image-syncer/releases/download/v1.5.4/image-syncer-v1.5.4-linux-amd64.tar.gz
-        tar zxf image-syncer-v1.5.4-linux-amd64.tar.gz
+    # - name: 下载image-sync工具包
+    #   run: |
+    #     wget -q  https://github.com/AliyunContainerService/image-syncer/releases/download/v1.5.4/image-syncer-v1.5.4-linux-amd64.tar.gz
+    #     tar zxf image-syncer-v1.5.4-linux-amd64.tar.gz
       
-    - name: 执行同步镜像
-      env: 
-        ALIHUB_PASSWORD: ${{ secrets.ALIHUB_PASSWORD }}
-      run: |
-        ./image-syncer --proc=2 --auth=./auth.yaml --images=./images.yaml --retries=2
+    # - name: 执行同步镜像
+    #   env: 
+    #     ALIHUB_PASSWORD: ${{ secrets.ALIHUB_PASSWORD }}
+    #   run: |
+    #     ./image-syncer --proc=2 --auth=./auth.yaml --images=./images.yaml --retries=2
