--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         node .github/scripts/check_format.js "${{ github.event.inputs.source }}"
 
-    - name: aaa
+    - name: Test
       run: |
         echo "${{steps.check_tag}}"
         echo "${{steps.check_tag.outputs.is_image_format}}"
