--- a/images.yaml
+++ b/images.yaml
@@ -1,3 +1,3 @@
 # 最好指定镜像tag,要不然会同步所有的tag版本,耗时很长或者limit失败
-nginx:1.18: "registry.cn-beijing.aliyuncs.com/yt-mirror/nginx"
+# nginx:1.18: "registry.cn-beijing.aliyuncs.com/yt-mirror/nginx"
 # mysql:8.4.2: registry.cn-beijing.aliyuncs.com/yt-mirror/mysql
